# sanic-book

./: .dockerignore  .gitignore  Dockerfile  Dockerfile2  README.md  pyproject.toml  readthedocs.yml  server.py
.github/workflows/: pages.yml
app/: _config.py  _test_server.py  main.py  requirements.txt  server.py  test.ipynb  test.py
app/_static/css/: form.css  main.css  playable.css  style.css
app/api/: __init__.py  info.py
app/api/content/: __init__.py  authors.py  static.py
app/configs/: main.toml
app/configs/about/: article.html
app/configs/forms/: article.html
app/configs/index/: article.html  aside.html
app/configs/platable/: article.html
app/configs/projects/: article.html  aside.html
app/templates/: demo.html  platable.html
app/utils/: config.py  schema.py
doc/: about.md  conf.py  index.md  test.txt
doc/_static/: switcher.json
doc/basics/: app.ipynb  index.md  intro.ipynb  websockets.ipynb
doc/basics/config/: custom.ipynb  index.md  intro.ipynb
doc/basics/handlers/: class-based-views.ipynb  custom.ipynb  index.md  intro.ipynb  streaming.ipynb
doc/basics/request/: custom.ipynb  index.md  intro.ipynb
doc/basics/routing/: index.md  intro.ipynb
doc/best-practices/: blueprints.ipynb  index.md
doc/html/: index.md  tips.md
doc/integrations/: GraphQL.ipynb  index.md  plotly.ipynb
doc/integrations/GraphQL/: embed.md  index.md
doc/integrations/GraphQL/Strawberry/: index.md  intro.ipynb
doc/integrations/GraphQL/Strawberry/concepts/: index.md
doc/sanic-ext/: index.md
src/sanic_book/: __init__.py
(+37 files in other folders)
